--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# Secret files - DO NOT PUSH
 .env
-serviceAccountKey.json
-
-# Environment folder - DO NOT PUSH
 .venv/
-
-# Python cache
 __pycache__/
-
-# IDE folders
-.idea/
+uploads/
+serviceAccountKey.json
